# necrobridge

./: .gitignore  ANCHOR_DEPLOYMENT_GUIDE.md  Anchor.toml  Cargo.toml  DEMO_CHECKLIST.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT_README.md  DEVNET_SETUP.md  FULL_TESTING_GUIDE.md  LEADERBOARD_FIX.md  MODERN_STACK.md  NECROBRIDGE_GUIDE.md  README.md  RISK_MITIGATIONS.md  SESSION_LOG.md  SESSION_PROGRESS.md  SUBMISSION.md  TESTING_PHASE_1_RESULTS.md  TEST_TOKENS.md  WORMHOLE_INTEGRATION_SUMMARY.md  codama.toml  demo-data.json  demo-script.js  jest.config.json  netlify.toml  package.json  pnpm-lock.yaml  setup.bat  setup.sh
.kiro/steering/: product.md  structure.md  tech.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY_CHECKLIST.md  WORMHOLE_INTEGRATION.md
dummy-erc20/: .env.example  DEPLOYMENT_COMPLETE.md  README.md  README_NECROBRIDGE.md  check-setup.sh  hardhat.config.js  package.json  pnpm-lock.yaml  send-zomb.js  setup.sh
frontend/: .env.example  DELIVERY_SUMMARY.md  JUDGES_GUIDE.md  MIGRATION_STRATEGY.md  PROJECT_COMPLETION.md  README.md  SETUP.md  WORMHOLE_COMPLETION.md  WORMHOLE_SDK_SUMMARY.md  WORMHOLE_TESTING.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
programs/necro_migrate/: Cargo.toml  build.bat  build.sh
programs/necro_migrate/src/: errors_simple.rs  lib.rs  state_simple.rs
programs/necro_migrate/src/instructions/: mod.rs
programs/necro_migrate/tests/: mollusk.test.ts  mollusk_tests.rs
scripts/: add-zomb-votes.js  deploy-devnet.sh  prepare-deploy.sh
templates/: README.md
tests/: integration.rs
(+85 files in other folders)
