[package]
name = "necro_migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
spl-token = "4"
sha2 = "0.10"
byteorder = "1.4"
blake3 = "=1.5.5"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dev-dependencies]
solana-sdk = "1.18"
solana-program = "1.18"

